--- a/style.css
+++ b/style.css
@@ -59,27 +59,93 @@ body {
   padding: 0 150px;
 }
 
-#courses{
-    margin-bottom: 120px;
+#courses {
+  margin-bottom: 120px;
 }
 
-#about{
-    margin-bottom: 120px;
+#about {
+  margin-bottom: 120px;
 }
 
-#about .container{
-    background: #F4FAFD;
+#about .container {
+  background: #f4fafd;
 }
 
-.about-image img{
-    width: 100%;
+.about-image img {
+  width: 100%;
 }
 
-.about-text h1{
-    font-size: 45px;
+.about-text h1 {
+  font-size: 45px;
 }
 
-#join .container{
-    background: #289BDE;
-    padding: 100px;
+#join {
+  margin-bottom: 120px;
+}
+
+#join .container {
+  background: #289bde;
+  padding: 100px;
+}
+
+#students {
+  margin-bottom: 120px;
+}
+
+#students h1 {
+  font-size: 45px;
+  margin-bottom: 10px;
+}
+
+#students p {
+  margin-bottom: 40px;
+}
+
+#students .student img {
+  width: 100%;
+}
+
+#students .student .student-text {
+  padding: 15px;
+}
+
+#students .student .student-text h1 {
+  font-size: 20px;
+}
+
+#students .student .student-text p {
+  font-size: 16px;
+  color: #3c3c3c;
+}
+
+#faq h1 {
+  margin-bottom: 10px;
+}
+
+#faq p {
+  margin-bottom: 40px;
+}
+
+#faq{
+  margin-bottom: 120px;
+}
+
+#footer{
+  background: #161616;
+  margin-top: 120px;
+}
+
+
+
+#footer .social-icons a{
+  width: 40px;
+  height: 40px;
+  padding: 10px 13px;
+  border-radius: 50%;
+  background: #242424;
+  margin: 0 5px;
+}
+
+#footer .social-icons a i{
+  color: white;
 }
