--- a/style.css
+++ b/style.css
@@ -79,6 +79,15 @@ body {
   font-size: 45px;
 }
 
+
+.about-text p {
+  font-size: 16px;
+}
+
+.about-text .count .count-box h1{
+  font-size:45px;
+}
+
 #join {
   margin-bottom: 120px;
 }
