--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
   --ff: "Poppins", sans-serif;
 }
 
+p{
+  color: #777;
+}
 * {
   margin: 0;
   padding: 0;
@@ -57,11 +60,17 @@ body {
 
 .carousel-caption p {
   padding: 0 150px;
+  color: white;
 }
 
 #courses {
   margin-bottom: 120px;
 }
+
+#courses p{
+  color: #777;
+}
+
 
 #about {
   margin-bottom: 120px;
@@ -82,6 +91,7 @@ body {
 
 .about-text p {
   font-size: 16px;
+  color: #777;
 }
 
 .about-text .count .count-box h1{
@@ -99,6 +109,7 @@ body {
 
 #students {
   margin-bottom: 120px;
+  margin-top: 120px;
 }
 
 #students h1 {
