--- a/style.css
+++ b/style.css
@@ -107,6 +107,10 @@ body {
   padding: 100px;
 }
 
+#join .join-btn{
+  color: #289BDE;
+}
+
 #students {
   margin-bottom: 120px;
   margin-top: 120px;
